--- a/backend/model.ipynb
+++ b/backend/model.ipynb
@@ -757,8 +757,8 @@
       },
       "source": [
         "url=\"http://127.0.0.1:5000/\"\r\n",
-        "data=json.dumps({'date':19,'month':0,'time':1,'city':1})\r\n",
-        "r=requests.post(url,data)\r\n",
+        "data1=json.dumps({'date':19,'month':0,'time':1,'city':1})\r\n",
+        "r=requests.post(url,data1)\r\n",
         "print(r.json())"
       ],
       "execution_count": null,
